--- a/style.css
+++ b/style.css
@@ -17,10 +17,9 @@
   --color-text-light: hsl(236, 100%, 87%);
 }
 
-*
-{
-	box-sizing: border-box;
-	margin: 0;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
 body {
@@ -33,7 +32,7 @@ body {
   min-height: 100vh;
   margin: 0;
   color: white;
-  font-size:18px;
+  font-size: 18px;
 }
 
 .grid-container {
@@ -89,6 +88,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-bottom: 1rem;
 }
 
 .filter-option {
@@ -101,10 +101,7 @@ body {
   padding: 0;
   font-family: inherit;
 }
-.filter-option:hover
-{
-	color: var(--color-text-light);
-}
+
 .filter-option.active,
 .filter-option:hover {
   color: white;
@@ -116,7 +113,6 @@ body {
   gap: 1.5rem;
 }
 
-
 .activity-card {
   display: grid;
   grid-template-rows: 40px 1fr;
@@ -124,30 +120,25 @@ body {
   overflow: hidden;
 }
 
-/* Colored top section */
 .activity-header {
-  background-color: var(--color-work); /* change per category */
   position: relative;
+  overflow: hidden;
 }
 
-/* Icon positioning */
-.activity-header::after {
-  content: '';
+.activity-header img {
   position: absolute;
   top: -10px;
   right: 1rem;
   width: 80px;
   height: 80px;
-  background: url('./images/icon-work.svg') no-repeat;
   opacity: 0.2;
 }
 
-/* Dark content card - overlaps the header */
 .activity-content {
   background-color: var(--color-bg-card);
   border-radius: 1rem 1rem 0 0;
-  padding: 1.2rem;
-  margin-top: -20px; /* pulls it up over the header */
+  padding: 1.45rem;
+  margin-top: -20px;
   position: relative;
   z-index: 1;
 }
@@ -202,5 +193,21 @@ body {
   
   .activity-grid {
     grid-template-columns: 1fr;
+  }
+  
+  .time-filter {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  
+  .activity-hours {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  .activity-hours h1 {
+    font-size: 2rem;
+    margin: 0;
   }
 }
